<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.LinearLayout"
    tools:orientation="horizontal">
  <ImageButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/ibMenu"
      android:src="@drawable/ic_close_grey_900_36dp"
      android:nextFocusRight="@+id/ibVoiceSearch"
      android:nextFocusDown="@+id/vTabs"
      android:background="@drawable/button_bg_selector"
      android:layout_margin="5dp"
      android:focusable="true"
      android:focusableInTouchMode="true"
      android:contentDescription="@string/close_application" />

  <ImageButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/ibVoiceSearch"
      android:src="@drawable/ic_mic_none_grey_900_36dp"
      android:nextFocusRight="@+id/ibHistory"
      android:nextFocusDown="@+id/vTabs"
      android:background="@drawable/button_bg_selector"
      android:layout_marginEnd="5dp"
      android:layout_marginTop="5dp"
      android:contentDescription="@string/voice_search" />

  <ImageButton
      android:id="@+id/ibHistory"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginEnd="5dp"
      android:background="@drawable/button_bg_selector"
      android:contentDescription="@string/history"
      android:nextFocusRight="@+id/ibFavorites"
      android:nextFocusDown="@+id/vTabs"
      android:src="@drawable/ic_history_grey_900_36dp"
      />

  <ImageButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/ibFavorites"
      android:src="@drawable/ic_star_border_grey_900_36dp"
      android:nextFocusRight="@+id/ibDownloads"
      android:nextFocusDown="@+id/vTabs"
      android:background="@drawable/button_bg_selector"
      android:layout_marginEnd="5dp"
      android:layout_marginTop="5dp"
      android:contentDescription="@string/favorites" />

  <ImageButton
      android:id="@+id/ibDownloads"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginEnd="5dp"
      android:background="@drawable/button_bg_selector"
      android:contentDescription="@string/downloads"
      android:nextFocusRight="@+id/ibIncognito"
      android:nextFocusDown="@+id/vTabs"
      android:src="@drawable/ic_file_download_grey_900"
      />

  <com.phlox.tvwebbrowser.widgets.CheckableImageButton
      android:id="@+id/ibIncognito"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginEnd="5dp"
      android:background="@drawable/button_bg_selector"
      android:contentDescription="@string/incognito_mode"
      android:nextFocusRight="@+id/ibSettings"
      android:nextFocusDown="@+id/vTabs"
      android:src="@drawable/ic_incognito"
      />

  <ImageButton
      android:src="@drawable/ic_settings_grey_900_24dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:nextFocusRight="@+id/etUrl"
      android:nextFocusDown="@+id/vTabs"
      android:id="@+id/ibSettings"
      android:background="@drawable/button_bg_selector"
      android:layout_marginEnd="5dp"
      android:layout_marginTop="5dp"
      android:contentDescription="@string/settings" />

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignWithParentIfMissing="true"
      android:background="@color/top_bar_background"
      android:id="@+id/flUrl">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUrl"
        android:iconifiedByDefault="false"
        android:textCursorDrawable="@null"
        android:textColor="@color/default_url_color"
        android:layout_marginTop="15dp"
        android:imeOptions="actionSearch"
        android:hint="@string/url_prompt"
        android:inputType="textFilter|textNoSuggestions|textUri"
        android:importantForAutofill="no" />
  </FrameLayout>
</merge>