<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/action"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvActionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:lines="2"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/current_key"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvActionKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSetKey"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:background="@drawable/button_bg_selector"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/set_key_for_action" />

    <Button
        android:id="@+id/btnClearKey"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:background="@drawable/button_bg_selector"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/clear" />
</GridLayout>