<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_selector"
            android:text="@string/add"
            android:id="@+id/btnAdd"
            android:layout_weight="1"
            android:textSize="18sp"
            android:lines="1"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeStepGranularity="1sp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_selector"
            android:text="@string/edit"
            android:id="@+id/btnEdit"
            android:layout_weight="1"
            android:textSize="18sp"
            android:lines="1"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeStepGranularity="1sp"/>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbLoading" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_bookmarks_yet"
        android:id="@+id/tvPlaceholder"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@drawable/list_item_bg_selector"
        android:id="@+id/listView" />
</LinearLayout>
