<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:minWidth="400dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTitle"
            android:visibility="gone"
            android:lines="1"
            android:inputType="text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/tvTitle"
            android:layout_weight="1"
            android:textStyle="bold"
            android:lines="1"
            android:ellipsize="end" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_selector"
            android:id="@+id/ibTitle"
            android:src="@drawable/ic_mode_edit_grey_400_18dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUrl"
            android:visibility="gone"
            android:lines="1"
            android:inputType="text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/tvUrl"
            android:layout_weight="1"
            android:textStyle="bold"
            android:lines="1"
            android:ellipsize="end" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_selector"
            android:id="@+id/ibUrl"
            android:src="@drawable/ic_mode_edit_grey_400_18dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_selector"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_selector"
            android:text="@string/done"
            android:id="@+id/btnDone"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
